--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+---
+layout: post
+title: Blogging Like a Hacker
+---
+
 Oi, mundo <br> Hola mundo <br> Hello World
+** Primeira edição **
+
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
